js -> shiny_js, css -> shiny_css

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,8 @@
-export(css)
 export(html)
-export(js)
 export(makeHTMLTag)
+export(shiny_css)
+export(shiny_js)
+export(use_d3)
 importFrom(shiny,singleton)
 importFrom(shiny,tags)
 S3method(print,kHTML)
